# AI_AS_A_SERVICE

./: .gitignore  CMakeLists.txt  README.md  capability_metadata.json  packmanager_lifecycle_sequence.puml  packmanager_lifecycle_sequence_high_level.puml
VSNU_PACK/ai-packv1/files/include/aipack/: aipack.hpp  pack_manager.hpp
VSNU_PACK/ai-packv1/files/include/aipack/core/: audio_hal.hpp  event_bus.hpp  governance.hpp  interfaces.hpp  json.hpp  logger.hpp  manifest.hpp  plugin_loader.hpp  registry.hpp  runtime.hpp  types.hpp  workflow.hpp
VSNU_PACK/ai-packv1/files/src/: CMakeLists.txt  aipack_core.cpp
catalog_service/: app.py  requirements.txt
catalog_service/data/: seed_packs.json
catalog_service_2/: README.md  app.py  capability_metadata.json
catalog_service_2/bundles/: aipack.nlp.basic-1.0.0.pack  aipack.recipe.agent-1.0.0.pack  aipack.stt.basic-1.0.0.pack  aipack.stt.google-1.0.0.pack  aipack.tts.basic-1.0.0.pack  aipack.tts.google-1.0.0.pack
docs/: SRS.md
examples/: query_packs.py
include/edgeai/: ai_gateway_service.h  capability_router.h  fs_utils.h  http_client.h  json_utils.h  pack_abi.h  pack_manager.h  pack_manifest.h  pack_runtime.h  process_utils.h
packs/next_word/: manifest.json
packs/next_word/config/: default.json
packs/next_word/include/: next_word_engine.h
packs/next_word/model/: next_word_bigram.onnx  transitions.json  vocab.json
packs/next_word/runtime/: next_word_helper.py
packs/next_word/src/: next_word_engine.cpp  next_word_pack.cpp
packs/next_word/tools/: generate_toy_next_word_onnx.py
src/common/: fs_utils.cpp  http_client.cpp  json_utils.cpp  process_utils.cpp
src/edge_gateway/: ai_gateway_service.cpp  capability_router.cpp  main.cpp  pack_manager.cpp  pack_manifest.cpp  pack_runtime.cpp
tests/: capability_router_test.cpp  common_utils_test.cpp  http_client_test.cpp  pack_manager_test.cpp  pack_manifest_test.cpp  pack_runtime_test.cpp  test_support.cpp  test_support.h
